- optimized expression parser - modularized "genres"

--- a/makefile.dj
+++ b/makefile.dj
@@ -1,7 +1,7 @@
-CC     = gpp
+CC     = gxx
 CFLAGS = -g -O2
 
-id3: main.o setid3.o varexp.o
+id3: main.o setid3.o varexp.o id3v1.o
 	$(CC) $(CFLAGS) -o $@ $+
 
 final: id3
@@ -21,6 +21,9 @@ clean:
 	del id3.exe
 
 %.o  : %.cpp %.h
+	$(CC) $(CFLAGS) -c $<
+
+%.o  : %.c %.h
 	$(CC) $(CFLAGS) -c $<
 
 main.o: main.cpp varexp.h setid3.h
