--- a/makefile.dj
+++ b/makefile.dj
@@ -5,15 +5,20 @@ CFLAGS	 = -g -O2
 
 ############################################################################
 
-id3: main.o setid3.o varexp.o id3v1.o
+all  : id3 id3l
+
+id3: main.o setid3.o setid3v2.o varexp.o id3v1.o id3v2.o id3_fmt.o
+	$(CC) -o $@ $+
+
+id3l: mainl.o setid3.o varexp.o id3v1.o
 	$(CC) -o $@ $+
 
 final: id3
 	upx --best -f -oID3.EXE $<
 
-all  : id3
-
-dist :	main.cpp varexp.cpp varexp.h setid3.cpp setid3.h \
+dist :	main.cpp varexp.h varexp.cpp \
+    id3v1.h setid3.h setid3.cpp \
+    id3v2.h setid3v2.h setid3v2.cpp \
     makefile.dj makefile.bcc makefile copying
 	pkzip -ex src.zip $+
 	pkzip -ex bin.zip readme copying id3.exe
@@ -26,10 +31,19 @@ clean:
 
 ############################################################################
 
-main.o: main.cpp setid3.h varexp.h id3v1.h
+main.o: main.cpp setid3.h setid3v2.h varexp.h id3v1.h id3v2.h
 	$(CC) $(CFLAGS) -c $<
 
-%.o  : %.cpp %.h
+mainl.o: main.cpp setid3.h varexp.h id3v1.h
+	$(CC) $(CFLAGS) -DNO_V2 -o $@ -c $<
+
+setid3v2.o: id3v2.h setid3.h
+setid3.o  : id3v1.h
+
+%.o : %.cpp %.h
+	$(CC) $(CFLAGS) -c $<
+
+%.o : %.c %.h
 	$(CC) $(CFLAGS) -c $<
 
 ############################################################################
