--- a/makefile.bcc
+++ b/makefile.bcc
@@ -5,18 +5,32 @@ CFLAGS = -d -O2
 
 ############################################################################
 
-id3.exe: main.obj setid3.obj varexp.obj id3v1.obj
+id3.exe: main.obj setid3.obj setid3v2.obj varexp.obj id3v1.obj id3v2.obj id3_fmt.obj
         $(CC) $(CFLAGS) -e$@ $**
+
+id3l.exe: mainl.obj setid3.obj varexp.obh id3v1.obj
+	$(CC) -o $@ $+
 
 final: id3.exe
         upx --best -f $**                       ## requires upx installed ##
 
-all  : id3.exe
+all  : id3.exe id3l.exe
 
 clean:
         del *.tds
         del *.obj
         del *.exe
+
+############################################################################
+
+main.obj: main.cpp setid3.h setid3v2.h varexp.h id3v1.h id3v2.h
+        $(CC) $(CFLAGS) -c $**
+
+mainl.obj: main.cpp setid3.h varexp.h id3v1.h
+        $(CC) $(CFLAGS) -DNO_V2 -o $@ -c $**
+
+setid3v2.obj: id3v2.h setid3.h
+setid3.obj  : id3v1.h
 
 .c.obj:
         $(CC) $(CFLAGS) -c $<
