--- a/makefile.bcc
+++ b/makefile.bcc
@@ -7,16 +7,16 @@ CFLAGS = -w- -d -O2
 
 ############################################################################
 
-id3.exe: main.obj setid3.obj setid3v2.obj varexp.obj id3v1.obj id3v2.obj id3_fmt.obj
+id3.exe: main.obj varexp.obj setid3.obj setid3v2.obj id3v1.obj id3v2.obj
         $(CC) $(CFLAGS) -e$@ $**
 
-id3l.exe: mainl.obj setid3.obj varexp.obj id3v1.obj
+id3l.exe: mainl.obj varexp.obj setid3.obj id3v1.obj
         $(CC) $(CFLAGS) -e$@ $**
+
+all  : id3.exe id3l.exe
 
 final: id3.exe id3l.exe
         upx --best $**                          ## requires upx installed ##
-
-all  : id3.exe id3l.exe
 
 clean:
         del *.tds
@@ -25,7 +25,7 @@ clean:
 
 ############################################################################
 
-mainl.obj: main.cpp setid3.h varexp.h id3v1.h
+mainl.obj: main.cpp
         $(CC) $(CFLAGS) -DNO_V2 -o$@ -c main.cpp
 
 .c.obj:
