*** empty log message ***

--- a/makefile.dj
+++ b/makefile.dj
@@ -1,6 +1,6 @@
 ## id3 makefile for DJGPP v2 ###############################################
 
-CC       = c:/temp/dj/bin/gxx
+CC       = gxx
 CFLAGS	 = -g -O2
 
 ############################################################################
