working on permissions

--- a/makefile.dj
+++ b/makefile.dj
@@ -5,7 +5,7 @@ CFLAGS = -g -O2
 
 ############################################################################
 
-id3.exe: main.o varexp.o setid3.o setid3v2.o id3v1.o id3v2.o
+id3.exe: main.o varexp.o setid3.o setid3v2.o id3v1.o id3v2.o fileops.o
 	$(CC) -o $@ $+
 
 id3l.exe: mainl.o varexp.o setid3.o id3v1.o
@@ -31,8 +31,9 @@ main.o: main.cpp varexp.h setid3.h setid3v2.h id3v1.h id3v2.h
 mainl.o: main.cpp varexp.h setid3.h id3v1.h
 	$(CC) $(CFLAGS) -DNO_V2 -o $@ -c main.cpp
 
-setid3v2.o: id3v2.h setid3.h
+setid3v2.o: id3v2.h setid3.h fileops.h
 setid3.o  : id3v1.h
+id3v2.o   : fileops.h
 
 %.o : %.cpp %.h
 	$(CC) $(CFLAGS) -c $<
