--- a/makefile.bcc
+++ b/makefile.bcc
@@ -7,7 +7,7 @@ CFLAGS = -w- -d -O2
 
 ############################################################################
 
-id3.exe: main.obj varexp.obj setid3.obj setid3v2.obj id3v1.obj id3v2.obj
+id3.exe: main.obj varexp.obj setid3.obj setid3v2.obj id3v1.obj id3v2.obj fileops.obj
         $(CC) $(CFLAGS) -e$@ $**
 
 id3l.exe: mainl.obj varexp.obj setid3.obj id3v1.obj
