Seperated smartid3::edit

--- a/makefile.dj
+++ b/makefile.dj
@@ -5,10 +5,11 @@ CFLAGS = -g -O2
 
 ############################################################################
 
-id3.exe: main.o varexp.o setid3.o setid3v2.o id3v1.o id3v2.o fileops.o
+id3.exe: main.o varexp.o sedit.o setid3.o setid3v2.o \
+	 id3v1.o id3v2.o fileops.o
 	$(CC) -o $@ $+
 
-id3l.exe: mainl.o varexp.o setid3.o id3v1.o
+id3l.exe: mainl.o varexp.o sedit.o setid3.o id3v1.o
 	$(CC) -o $@ $+
 
 all  : id3.exe id3l.exe
@@ -25,14 +26,14 @@ clean:
 
 ############################################################################
 
-main.o: main.cpp varexp.h setid3.h setid3v2.h id3v1.h id3v2.h
+main.o: main.cpp varexp.h setid3.h setid3v2.h sedit.h
 	$(CC) $(CFLAGS) -c main.cpp
 
-mainl.o: main.cpp varexp.h setid3.h id3v1.h
+mainl.o: main.cpp varexp.h setid3.h sedit.h
 	$(CC) $(CFLAGS) -DNO_V2 -o $@ -c main.cpp
 
-setid3v2.o: id3v2.h setid3.h fileops.h
-setid3.o  : id3v1.h
+setid3v2.o: sedit.h id3v1.h id3v2.h setid3.h fileops.h
+setid3.o  : sedit.h id3v1.h
 id3v2.o   : fileops.h
 
 %.o : %.cpp %.h
