--- a/makefile.bcc
+++ b/makefile.bcc
@@ -1,16 +1,16 @@
 ## id3 makefile for Borland C++ (tested with 5.5) ##########################
 
-CC     = bcc32
+CC     = bcc32 -D_POSIX_
 CFLAGS = -w- -d -O2
 
 .autodepend
 
 ############################################################################
 
-id3.exe: main.obj varexp.obj setid3.obj setid3v2.obj id3v1.obj id3v2.obj fileops.obj ffindexp.obj
+id3.exe: main.obj varexp.obj ffindexp.obj sedit.obj setid3.obj setid3v2.obj id3v1.obj id3v2.obj fileops.obj
         $(CC) $(CFLAGS) -e$@ $**
 
-id3l.exe: mainl.obj varexp.obj setid3.obj id3v1.obj ffindexp.obj
+id3l.exe: mainl.obj varexp.obj ffindexp.obj sedit.obj setid3.obj id3v1.obj
         $(CC) $(CFLAGS) -e$@ $**
 
 all  : id3.exe id3l.exe
