--- a/makefile.bcc
+++ b/makefile.bcc
@@ -7,10 +7,14 @@ CFLAGS = -w- -d -O2
 
 ############################################################################
 
-id3.exe: main.obj varexp.obj ffindexp.obj sedit.obj setid3.obj setid3v2.obj id3v1.obj id3v2.obj fileops.obj
+id3.exe: main.obj sedit.obj varexp.obj ffindexp.obj \
+         setid3.obj setid3v2.obj \
+         id3v1.obj id3v2.obj fileops.obj
         $(CC) $(CFLAGS) -e$@ $**
 
-id3l.exe: mainl.obj varexp.obj ffindexp.obj sedit.obj setid3.obj id3v1.obj
+id3l.exe: mainl.obj sedit.obj varexp.obj ffindexp.obj \
+         setid3.obj \
+         id3v1.obj
         $(CC) $(CFLAGS) -e$@ $**
 
 all  : id3.exe id3l.exe
