--- a/makefile.dj
+++ b/makefile.dj
@@ -5,11 +5,14 @@ CFLAGS = -g -O2
 
 ############################################################################
 
-id3.exe: main.o varexp.o ffindexp.o sedit.o setid3.o setid3v2.o \
+id3.exe: main.o sedit.o varexp.o ffindexp.o \
+	 setid3.o setid3v2.o \
 	 id3v1.o id3v2.o fileops.o
 	$(CC) -o $@ $+
 
-id3l.exe: mainl.o varexp.o ffindexp.o sedit.o setid3.o id3v1.o
+id3l.exe: mainl.o sedit.o varexp.o ffindexp.o \
+	 setid3.o \
+	 id3v1.o
 	$(CC) -o $@ $+
 
 all  : id3.exe id3l.exe
@@ -26,15 +29,15 @@ clean:
 
 ############################################################################
 
-main.o: main.cpp ffindexp.h auto_dir.h setid3v2.h setid3.h sedit.h
+main.o: main.cpp sedit.h ffindexp.h auto_dir.h setid3v2.h setid3.h
 	$(CC) $(CFLAGS) -c main.cpp
 
-mainl.o: main.cpp ffindexp.h auto_dir.h setid3.h sedit.h
+mainl.o: main.cpp sedit.h ffindexp.h auto_dir.h setid3.h
 	$(CC) $(CFLAGS) -DNO_V2 -o $@ -c main.cpp
 
 ffindexp.o: varexp.h auto_dir.h
-setid3v2.o: setid3.h sedit.h id3v1.h id3v2.h fileops.h
 setid3.o  : sedit.h id3v1.h
+setid3v2.o: setid3.h sedit.h id3v1.h id3v2.h fileops.h
 id3v2.o   : fileops.h
 
 %.o : %.cpp %.h
