--- a/makefile.dj
+++ b/makefile.dj
@@ -1,19 +1,20 @@
 ## id3 makefile for DJGPP v2 ###############################################
 
-CC     = gxx
-CFLAGS = -g -O2
+CC	= gxx
+CFLAGS	= -g -O2
+LDFLAGS =
 
 ############################################################################
 
 id3.exe: main.o sedit.o varexp.o ffindexp.o \
 	 setid3.o setid3v2.o \
 	 id3v1.o id3v2.o fileops.o
-	$(CC) -o $@ $+
+	$(CC) $(LDFLAGS) -o $@ $+
 
 id3l.exe: mainl.o sedit.o varexp.o ffindexp.o \
 	 setid3.o \
 	 id3v1.o
-	$(CC) -o $@ $+
+	$(CC) $(LDFLAGS) -o $@ $+
 
 all  : id3.exe id3l.exe
 
