--- a/makefile.dj
+++ b/makefile.dj
@@ -1,9 +1,8 @@
 ## id3 makefile for DJGPP v2 ###############################################
 
-CC       = gxx
-CFLAGS   = -g -O2
-CXXFLAGS = $(CFLAGS)
-LDFLAGS  =
+CC	= gxx
+CFLAGS	= -g -O2
+LDFLAGS =
 
 ############################################################################
 
@@ -15,7 +14,7 @@ id3.exe: main.o sedit.o varexp.o ffindexp.o \
 id3l.exe: mainl.o sedit.o varexp.o ffindexp.o \
 	 setid3.o \
 	 id3v1.o
-	$(CC) $(LDFLAGS) -o $@ $+
+	$(CC) $(LDFLAGS)  -o $@ $+
 
 all  : id3.exe id3l.exe
 
@@ -32,10 +31,10 @@ clean:
 ############################################################################
 
 main.o: main.cpp sedit.h ffindexp.h auto_dir.h setid3v2.h setid3.h
-        $(CC) $(CXXFLAGS) -c main.cpp
+	$(CC) $(CFLAGS) -c main.cpp
 
 mainl.o: main.cpp sedit.h ffindexp.h auto_dir.h setid3.h
-        $(CC) $(CXXFLAGS) -DNO_V2 -o $@ -c main.cpp
+	$(CC) $(CFLAGS) -DNO_V2 -o $@ -c main.cpp
 
 ffindexp.o: varexp.h auto_dir.h
 setid3.o  : sedit.h id3v1.h
@@ -43,7 +42,7 @@ setid3v2.o: setid3.h sedit.h id3v1.h id3v2.h fileops.h
 id3v2.o   : fileops.h
 
 %.o : %.cpp %.h
-        $(CC) $(CXXFLAGS) -c $<
+	$(CC) $(CFLAGS) -c $<
 
 %.o : %.c %.h
 	$(CC) $(CFLAGS) -c $<
