--- a/makefile.bcc
+++ b/makefile.bcc
@@ -8,35 +8,35 @@ CFLAGS = -w- -d -O2
 ############################################################################
 
 id3.exe: main.obj sedit.obj varexp.obj ffindexp.obj \
-         setid3.obj setid3v2.obj \
-         id3v1.obj id3v2.obj fileops.obj
-        $(CC) $(CFLAGS) -e$@ $**
+	 set_base.obj setid3.obj setid3v2.obj \
+	 id3v1.obj id3v2.obj fileops.obj
+	$(CC) $(CFLAGS) -e$@ $**
 
 id3l.exe: mainl.obj sedit.obj varexp.obj ffindexp.obj \
-         setid3.obj \
-         id3v1.obj
-        $(CC) $(CFLAGS) -e$@ $**
+	 set_base.obj setid3.obj \
+	 id3v1.obj
+	$(CC) $(CFLAGS) -e$@ $**
 
 all  : id3.exe id3l.exe
 
 final: id3.exe id3l.exe
-        upx --best $**                          ## requires upx installed ##
+	upx --best $**				## requires upx installed ##
 
 clean:
-        del *.tds
-        del *.obj
-        del *.exe
+	del *.tds
+	del *.obj
+	del *.exe
 
 ############################################################################
 
 mainl.obj: main.cpp
-        $(CC) $(CFLAGS) -DNO_V2 -o$@ -c main.cpp
+	$(CC) $(CFLAGS) -DNO_V2 -o$@ -c main.cpp
 
 .c.obj:
-        $(CC) $(CFLAGS) -c $<
+	$(CC) $(CFLAGS) -c $<
 
 .cpp.obj:
-        $(CC) $(CFLAGS) -c $<
+	$(CC) $(CFLAGS) -c $<
 
 ############################################################################
 
