*** empty log message ***

--- a/makefile.dj
+++ b/makefile.dj
@@ -6,15 +6,7 @@ LDFLAGS =
 
 ############################################################################
 
-id3.exe: main.o sedit.o varexp.o ffindexp.o charconv.o \
-	 set_base.o setid3.o setid3v2.o \
-	 id3v1.o id3v2.o fileops.o
-	$(CC) $(LDFLAGS) -o $@ $+
-
-id3l.exe: mainl.o sedit.o varexp.o ffindexp.o charconv.o \
-	 set_base.o setid3.o \
-	 id3v1.o
-	$(CC) $(LDFLAGS)  -o $@ $+
+default: id3.exe
 
 all  : id3.exe id3l.exe
 
@@ -30,24 +22,40 @@ clean:
 
 ############################################################################
 
-main.o: main.cpp sedit.h ffindexp.h auto_dir.h setid3v2.h setid3.h
-	$(CC) $(CFLAGS) -c main.cpp
+id3.exe: main.o sedit.o varexp.o ffindexp.o charconv.o \
+	 set_base.o setid3.o setid3v2.o \
+	 id3v1.o id3v2.o fileops.o
+	$(CC) $(LDFLAGS) -o $@ $+
 
-mainl.o: main.cpp sedit.h ffindexp.h auto_dir.h setid3.h
+id3l.exe: mainl.o sedit.o varexp.o ffindexp.o charconv.o \
+	 setid3.o \
+	 id3v1.o
+	$(CC) $(LDFLAGS)  -o $@ $+
+
+mainl.o: main.cpp ffindexp.h auto_dir.h set_base.h sedit.h setid3.h
 	$(CC) $(CFLAGS) -DNO_V2 -o $@ -c main.cpp
-
-sedit.o   : charconv.h
-ffindexp.o: varexp.h auto_dir.h
-set_base.o: sedit.h
-setid3.o  : set_base.h sedit.h id3v1.h
-setid3v2.o: set_base.h setid3.h sedit.h id3v1.h id3v2.h fileops.h
-id3v2.o   : fileops.h
 
 %.o : %.cpp %.h
 	$(CC) $(CFLAGS) -c $<
 
 %.o : %.c %.h
 	$(CC) $(CFLAGS) -c $<
+
+## dependencies -MM ########################################################
+
+fileops.o: fileops.c fileops.h
+id3v1.o: id3v1.c id3v1.h
+id3v2.o: id3v2.c fileops.h id3v2.h
+charconv.o: charconv.cpp charconv.h
+ffindexp.o: ffindexp.cpp varexp.h auto_dir.h ffindexp.h
+main.o: main.cpp ffindexp.h auto_dir.h set_base.h sedit.h setid3.h \
+  setid3v2.h
+sedit.o: sedit.cpp charconv.h sedit.h
+set_base.o: set_base.cpp set_base.h sedit.h
+setid3.o: setid3.cpp setid3.h set_base.h sedit.h id3v1.h
+setid3v2.o: setid3v2.cpp setid3v2.h set_base.h sedit.h id3v1.h id3v2.h \
+  fileops.h
+varexp.o: varexp.cpp varexp.h
 
 ############################################################################
 
