--- a/makefile.bcc
+++ b/makefile.bcc
@@ -13,7 +13,7 @@ id3.exe: main.obj sedit.obj varexp.obj ffindexp.obj charconv.obj \
 	$(CC) $(CFLAGS) -e$@ $**
 
 id3l.exe: mainl.obj sedit.obj varexp.obj ffindexp.obj charconv.obj \
-	 set_base.obj setid3.obj \
+	 setid3.obj \
 	 id3v1.obj
 	$(CC) $(CFLAGS) -e$@ $**
 
