--- a/makefile.bcc
+++ b/makefile.bcc
@@ -8,7 +8,7 @@ CFLAGS = -q -w- -d -O2
 ############################################################################
 
 id3.exe: main.obj sedit.obj varexp.obj ffindexp.obj charconv.obj \
-	 set_base.obj setid3.obj setid3v2.obj \
+         set_base.obj setid3.obj setid3v2.obj setfname.obj \
 	 id3v1.obj id3v2.obj fileops.obj
 	$(CC) $(CFLAGS) -e$@ $**
 
