--- a/makefile.bcc
+++ b/makefile.bcc
@@ -30,10 +30,10 @@ clean:
 ############################################################################
 
 main.obj: main.cpp
-	$(CC) $(CFLAGS) -DDOS_DIRSEP -o$@ -c main.cpp
+        $(CC) $(CFLAGS) -o$@ -c main.cpp
 
 mainl.obj: main.cpp
-	$(CC) $(CFLAGS) -DDOS_DIRSEP -DNO_V2 -o$@ -c main.cpp
+        $(CC) $(CFLAGS) -DNO_V2 -o$@ -c main.cpp
 
 .c.obj:
 	$(CC) $(CFLAGS) -c $<
