--- a/makefile.bcc
+++ b/makefile.bcc
@@ -8,7 +8,7 @@ CFLAGS = -q -w- -d -O2
 ############################################################################
 
 id3.exe: main.obj sedit.obj varexp.obj ffindexp.obj charconv.obj \
-         set_base.obj setid3.obj setid3v2.obj setfname.obj \
+	 set_base.obj setid3.obj setid3v2.obj \
 	 id3v1.obj id3v2.obj fileops.obj
 	$(CC) $(CFLAGS) -e$@ $**
 
@@ -30,10 +30,10 @@ clean:
 ############################################################################
 
 main.obj: main.cpp
-        $(CC) $(CFLAGS) -o$@ -c main.cpp
+	$(CC) $(CFLAGS) -o$@ -c main.cpp
 
 mainl.obj: main.cpp
-        $(CC) $(CFLAGS) -DNO_V2 -o$@ -c main.cpp
+	$(CC) $(CFLAGS) -DNO_V2 -o$@ -c main.cpp
 
 .c.obj:
 	$(CC) $(CFLAGS) -c $<
