--- a/makefile.dj
+++ b/makefile.dj
@@ -6,7 +6,7 @@ LDFLAGS =
 
 ############################################################################
 
-default: id3.exe
+build: id3.exe
 
 all  : id3.exe id3l.exe
 
@@ -23,12 +23,12 @@ clean:
 ############################################################################
 
 id3.exe: main.o sedit.o varexp.o ffindexp.o charconv.o \
-	 set_base.o setid3.o setid3v2.o \
+	 set_base.o setid3.o setid3v2.o setfname.o \
 	 id3v1.o id3v2.o fileops.o
 	$(CC) $(LDFLAGS) -o $@ $+
 
 id3l.exe: mainl.o sedit.o varexp.o ffindexp.o charconv.o \
-	 set_base.o setid3.o \
+	 set_base.o setid3.o setfname.o \
 	 id3v1.o
 	$(CC) $(LDFLAGS)  -o $@ $+
 
