--- a/makefile.dj
+++ b/makefile.dj
@@ -21,8 +21,7 @@ clean:
 	del id3l.exe
 
 zip:
-	del distrib.zip
-	pkzip -exP distrib * debian/*
+	tar cvfz distrib * debian/* --no-recursion
 
 ############################################################################
 
