*** empty log message ***

--- a/makefile.dj
+++ b/makefile.dj
@@ -52,20 +52,23 @@ mainl.o:
 
 ## dependencies -MM ########################################################
 
-main.o: main.cpp ffindexp.h auto_dir.h sedit.h set_base.h setid3.h \
- setfname.h setid3v2.h
-mainl.o: main.cpp ffindexp.h auto_dir.h sedit.h set_base.h setid3.h \
- setfname.h
-sedit.o: sedit.cpp charconv.h sedit.h
+main.o: main.cpp ffindexp.h auto_dir.h sedit.h charconv.h set_base.h \
+  setid3.h setfname.h setecho.h setid3v2.h
+mainl.o: main.cpp ffindexp.h auto_dir.h sedit.h charconv.h set_base.h \
+  setid3.h setfname.h setecho.h
+sedit.o: sedit.cpp sedit.h charconv.h
 varexp.o: varexp.cpp varexp.h
 ffindexp.o: ffindexp.cpp varexp.h auto_dir.h ffindexp.h
 charconv.o: charconv.cpp charconv.h
-set_base.o: set_base.cpp set_base.h sedit.h
-setid3.o: setid3.cpp setid3.h set_base.h sedit.h id3v1.h charconv.h
-setid3v2.o: setid3v2.cpp setid3v2.h set_base.h sedit.h id3v1.h id3v2.h \
- fileops.h charconv.h
+set_base.o: set_base.cpp set_base.h sedit.h charconv.h
+setid3.o: setid3.cpp setid3.h set_base.h sedit.h charconv.h getid3.h \
+  id3v1.h
+setid3v2.o: setid3v2.cpp setid3v2.h set_base.h sedit.h charconv.h \
+  getid3v2.h id3v1.h id3v2.h fileops.h
 setfname.o: setfname.cpp setfname.h set_base.h sedit.h charconv.h
 setecho.o: setecho.cpp setecho.h set_base.h sedit.h charconv.h
+getid3.o: getid3.cpp getid3.h set_base.h sedit.h charconv.h id3v1.h
+getid3v2.o: getid3v2.cpp getid3v2.h set_base.h sedit.h charconv.h id3v2.h
 fileops.o: fileops.c fileops.h
 id3v1.o: id3v1.c id3v1.h
 id3v2.o: id3v2.c fileops.h id3v2.h
