--- a/makefile.bcc
+++ b/makefile.bcc
@@ -7,13 +7,13 @@ CFLAGS = -q -w- -d -O2
 
 ############################################################################
 
-id3.exe: main.obj sedit.obj varexp.obj ffindexp.obj charconv.obj \
+id3.exe: main.obj sedit.obj varexp.obj fileexp.obj charconv.obj \
          set_base.obj setid3.obj setid3v2.obj setfname.obj setecho.obj \
          getid3.obj getid3v2.obj \
 	 id3v1.obj id3v2.obj fileops.obj
 	$(CC) $(CFLAGS) -e$@ $**
 
-id3l.exe: mainl.obj sedit.obj varexp.obj ffindexp.obj charconv.obj \
+id3l.exe: mainl.obj sedit.obj varexp.obj fileexp.obj charconv.obj \
          set_base.obj setid3.obj setfname.obj setecho.obj \
          getid3.obj \
          id3v1.obj
