--- a/makefile.dj
+++ b/makefile.dj
@@ -26,15 +26,15 @@ zip:
 
 ############################################################################
 
-id3.exe: main.o sedit.o varexp.o fileexp.o charconv.o \
-         set_base.o setid3.o setid3v2.o setfname.o setecho.o \
-         getid3.o getid3v2.o \
+id3.exe: main.o sedit.o varexp.o fileexp.o charconv.o mass_tag.o pattern.o \
+	 set_base.o setid3.o setid3v2.o setfname.o setecho.o \
+	 getid3.o getid3v2.o \
 	 id3v1.o id3v2.o fileops.o
 	$(CC) $(LDFLAGS) -o $@ $+
 
-id3l.exe: mainl.o sedit.o varexp.o fileexp.o charconv.o \
-         set_base.o setid3.o setfname.o setecho.o \
-         getid3.o \
+id3l.exe: mainl.o sedit.o varexp.o fileexp.o charconv.o mass_tag.o pattern.o \
+	 set_base.o setid3.o setfname.o setecho.o \
+	 getid3.o \
 	 id3v1.o
 	$(CC) $(LDFLAGS)  -o $@ $+
 
@@ -53,9 +53,9 @@ mainl.o:
 ## dependencies -MM ########################################################
 
 main.o: main.cpp fileexp.h sedit.h charconv.h set_base.h setid3.h \
-  setfname.h setecho.h setid3v2.h verbose.cpp
+  setfname.h setecho.h setid3v2.h
 mainl.o: main.cpp fileexp.h sedit.h charconv.h set_base.h setid3.h \
-  setfname.h setecho.h verbose.cpp
+  setfname.h setecho.h
 sedit.o: sedit.cpp sedit.h charconv.h
 varexp.o: varexp.cpp varexp.h
 fileexp.o: fileexp.cpp varexp.h auto_dir.h fileexp.h
@@ -72,5 +72,7 @@ getid3v2.o: getid3v2.cpp getid3v2.h set_base.h sedit.h charconv.h id3v2.h
 fileops.o: fileops.c fileops.h
 id3v1.o: id3v1.c id3v1.h
 id3v2.o: id3v2.c fileops.h id3v2.h
+mass_tag.o: mass_tag.cpp charconv.h mass_tag.h set_base.h fileexp.h
+pattern.o: pattern.cpp
 
 ############################################################################
