*** empty log message ***

--- a/makefile.dj
+++ b/makefile.dj
@@ -29,7 +29,7 @@ zip:
 id3.exe: main.o sedit.o varexp.o fileexp.o charconv.o mass_tag.o pattern.o \
 	 set_base.o setid3.o setid3v2.o setfname.o setecho.o \
 	 getid3.o getid3v2.o \
-	 id3v1.o id3v2.o fileops.o
+	 id3v1.o id3v2.o fileops.o char_ucs.o
 	$(CC) $(LDFLAGS) -o $@ $+
 
 id3l.exe: mainl.o sedit.o varexp.o fileexp.o charconv.o mass_tag.o pattern.o \
@@ -52,29 +52,27 @@ mainl.o:
 
 ## dependencies -MM ########################################################
 
-main.o: main.cpp sedit.h charconv.h set_base.h setid3.h setfname.h \
-  setecho.h setid3v2.h mass_tag.h fileexp.h pattern.h
-mainl.o: main.cpp sedit.h charconv.h set_base.h setid3.h setfname.h \
-  setecho.h mass_tag.h fileexp.h pattern.h
-sedit.o: sedit.cpp sedit.h charconv.h
+main.o: main.cpp set_base.h sedit.h charconv.h setid3.h setfname.h setecho.h \
+  setid3v2.h mass_tag.h fileexp.h pattern.h
+sedit.o: sedit.cpp  sedit.h charconv.h
 varexp.o: varexp.cpp varexp.h
 fileexp.o: fileexp.cpp varexp.h auto_dir.h fileexp.h
 charconv.o: charconv.cpp charconv.h
-mass_tag.o: mass_tag.cpp charconv.h mass_tag.h fileexp.h set_base.h \
-  sedit.h
-pattern.o: pattern.cpp pattern.h set_base.h sedit.h charconv.h mass_tag.h \
-  fileexp.h
+mass_tag.o: mass_tag.cpp charconv.h sedit.h set_base.h mass_tag.h fileexp.h
+pattern.o: pattern.cpp set_base.h sedit.h charconv.h mass_tag.h fileexp.h \
+  pattern.h
 set_base.o: set_base.cpp set_base.h sedit.h charconv.h
-setid3.o: setid3.cpp setid3.h set_base.h sedit.h charconv.h getid3.h \
-  id3v1.h
-setid3v2.o: setid3v2.cpp setid3v2.h set_base.h sedit.h charconv.h \
-  getid3v2.h id3v1.h id3v2.h fileops.h
-setfname.o: setfname.cpp setfname.h set_base.h sedit.h charconv.h
+setid3.o: setid3.cpp id3v1.h getid3.h set_base.h sedit.h charconv.h setid3.h
+setid3v2.o: setid3v2.cpp char_ucs.h charconv.h id3v1.h id3v2.h fileops.h \
+  getid3v2.h set_base.h sedit.h setid3v2.h
+setfname.o: setfname.cpp sedit.h charconv.h setfname.h set_base.h
 setecho.o: setecho.cpp setecho.h set_base.h sedit.h charconv.h
 getid3.o: getid3.cpp getid3.h set_base.h sedit.h charconv.h id3v1.h
-getid3v2.o: getid3v2.cpp getid3v2.h set_base.h sedit.h charconv.h id3v2.h
+getid3v2.o: getid3v2.cpp char_ucs.h charconv.h id3v2.h getid3v2.h set_base.h \
+  sedit.h
+id3v1.o: id3v1.c  id3v1.h
+id3v2.o: id3v2.c  fileops.h id3v2.h
 fileops.o: fileops.c fileops.h
-id3v1.o: id3v1.c id3v1.h
-id3v2.o: id3v2.c fileops.h id3v2.h
+char_ucs.o: char_ucs.cpp char_ucs.h charconv.h
 
 ############################################################################
